johnlimadev/force-app/main/default/objects/Opportunity/fields/Corretora__c.field-meta.xml
<CustomField>
    <fullName>Corretora__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Corretora</label>
    <referenceTo>Corretora__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>