johnlimadev/force-app/main/default/objects/Opportunity/fields/Count_LogCPFs__c.field-meta.xml
<CustomField>
    <fullName>Count_LogCPFs__c</fullName>
    <label>Count LogCPFs</label>
    <summaryForeignKey>LogCPF__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>