johnlimadev/force-app/main/default/objects/Opportunity/recordTypes/Green_RT.recordType-meta.xml
<RecordType>
    <fullName>Green_RT</fullName>
    <active>true</active>
    <businessProcess>Green</businessProcess>
    <description>Green RT</description>
    <label>Green RT</label>
</RecordType>