johnlimadev/force-app/main/default/objects/Opportunity/recordTypes/Wagne.recordType-meta.xml
<RecordType>
    <fullName>Wagne</fullName>
    <active>true</active>
    <businessProcess>Wagne</businessProcess>
    <label>Wagne</label>
</RecordType>