johnlimadev/force-app/main/default/objects/Opportunity/recordTypes/Yellow_RT.recordType-meta.xml
<RecordType>
    <fullName>Yellow_RT</fullName>
    <active>true</active>
    <businessProcess>Yellow</businessProcess>
    <description>Yellow RT</description>
    <label>Yellow RT</label>
</RecordType>